# sync-jira-actions

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  pyproject.toml  requirements.txt  test_sync_to_jira.py
.github/workflows/: python-test.yml  test_jira_sync.yml
src/: sync_issue.py  sync_to_jira.py
sync_jira_actions/: sync_issue.py  sync_pr.py  sync_to_jira.py  version.py
tests/: test_sync_issue.py  test_sync_pr.py  test_sync_to_jira.py
